--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,9 +29,9 @@
         android:layout_marginBottom="4dp"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
-        android:text="Уделите пару минут, чтобы сделать Ваш город удобнее и умнее!"
+        android:text="@string/text_splashscreen"
         android:textAlignment="center"
-        android:textSize="24sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@id/button"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -51,8 +51,8 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:backgroundTint="@color/blue"
-        android:text="Пройти опрос"
-        android:textSize="18sp"
+        android:text="@string/button_splashscreen"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
