--- a/app/src/main/res/layout/listitem.xml
+++ b/app/src/main/res/layout/listitem.xml
@@ -23,7 +23,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:text="Тестовый вопрос"
+                android:text="@string/test_question_text"
                 android:textSize="20sp"/>
 
             <RadioGroup
@@ -40,7 +40,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="@color/blue"
-                    android:text="Да"
+                    android:text="@string/yes"
                     android:textSize="20sp" />
 
                 <RadioButton
@@ -48,7 +48,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="@color/blue"
-                    android:text="Нет"
+                    android:text="@string/no"
                     android:textSize="20sp" />
 
                 <RadioButton
@@ -56,7 +56,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:buttonTint="@color/blue"
-                    android:text="Нет в городе/Не знаю"
+                    android:text="@string/third_option"
                     android:textSize="20sp" />
 
 
